objects/ESC_PushTopicHelper__c.object
<CustomObject>
    <description>record entry for object where in there&apos;s no standard support for object</description>
    <fields>
        <fullName>ESC_CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EventType__c</fullName>
        <label>Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Email Read By</fullName>
                </value>
                <value>
                    <fullName>New Incoming Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_ObjectType__c</fullName>
        <description>type of object(API Names)</description>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EmailMessage</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_ParentRecID__c</fullName>
        <label>Parent Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RecGuestUser__c</fullName>
        <label>Guest User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RecLastMB__c</fullName>
        <label>Record Last Modified By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RecOwner__c</fullName>
        <label>Record Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Push Topic Helper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESC_EventType__c</columns>
        <columns>ESC_RecOwner__c</columns>
        <columns>ESC_RecGuestUser__c</columns>
        <columns>ESC_ObjectType__c</columns>
        <columns>ESC_ParentRecID__c</columns>
        <columns>ESC_RecLastMB__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ESC_CaseNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESC_CaseNumber__c</field>
            <operation>equals</operation>
            <value>05968745</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PTH-{0000}</displayFormat>
        <label>Push Topic Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Topic Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>